ros2_ws/log/build_2024-12-13_13-37-59/mypkg/stderr.log
  File "/home/haru/test2/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/talker.py", line 15
    n = += 1
        ^
SyntaxError: invalid syntax

